--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+  <script src="/libs/keycloak-js-adapter-dist-3.3.0.CR2/keycloak.min.js"></script>
   <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -28,7 +29,7 @@
   <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-  <div id="root"></div>
+  <div id="root" className="container"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
